logs/dag_id=Fail_Dags_Monitor/run_id=manual__2024-07-05T08:18:45.478464+00:00/task_id=load/attempt=24.log
[2024-07-05T08:45:36.012+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-05T08:45:36.031+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Fail_Dags_Monitor.load manual__2024-07-05T08:18:45.478464+00:00 [queued]>
[2024-07-05T08:45:36.037+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Fail_Dags_Monitor.load manual__2024-07-05T08:18:45.478464+00:00 [queued]>
[2024-07-05T08:45:36.037+0000] {taskinstance.py:2306} INFO - Starting attempt 24 of 24
[2024-07-05T08:45:36.044+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): load> on 2024-07-05 08:18:45.478464+00:00
[2024-07-05T08:45:36.049+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=48554) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-07-05T08:45:36.051+0000] {standard_task_runner.py:63} INFO - Started process 48556 to run task
[2024-07-05T08:45:36.050+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'Fail_Dags_Monitor', 'load', 'manual__2024-07-05T08:18:45.478464+00:00', '--job-id', '525', '--raw', '--subdir', 'DAGS_FOLDER/fail_dags_monitor.py', '--cfg-path', '/tmp/tmpk0owvyh0']
[2024-07-05T08:45:36.052+0000] {standard_task_runner.py:91} INFO - Job 525: Subtask load
[2024-07-05T08:45:36.086+0000] {task_command.py:426} INFO - Running <TaskInstance: Fail_Dags_Monitor.load manual__2024-07-05T08:18:45.478464+00:00 [running]> on host 0b64c9d791b9
[2024-07-05T08:45:36.146+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='congminh.nguyen@onpoint.vn' AIRFLOW_CTX_DAG_ID='Fail_Dags_Monitor' AIRFLOW_CTX_TASK_ID='load' AIRFLOW_CTX_EXECUTION_DATE='2024-07-05T08:18:45.478464+00:00' AIRFLOW_CTX_TRY_NUMBER='24' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-05T08:18:45.478464+00:00'
[2024-07-05T08:45:36.147+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-05T08:45:36.304+0000] {dagbag.py:545} INFO - Filling up the DagBag from /opt/***/dags
[2024-07-05T08:45:36.899+0000] {logging_mixin.py:188} INFO - Successfully connect to database!
[2024-07-05T08:45:37.102+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-05T08:45:37.104+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/fail_dags_monitor.py", line 80, in load
    c.copy_expert(
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 13:                     ) FROM STDIN WITH CSV
                             ^

[2024-07-05T08:45:37.117+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=Fail_Dags_Monitor, task_id=load, run_id=manual__2024-07-05T08:18:45.478464+00:00, execution_date=20240705T081845, start_date=20240705T084536, end_date=20240705T084537
[2024-07-05T08:45:37.126+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 525 for task load (syntax error at or near ")"
LINE 13:                     ) FROM STDIN WITH CSV
                             ^
; 48556)
[2024-07-05T08:45:37.167+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-05T08:45:37.181+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-05T08:45:37.182+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
